@@ -1,21 +1,21 @@
-<scene>
+<scene showMouse="true">
   <actor costume="earth" x="0" y="0" direction="0.0" start="default"/>
   <actor costume="alien3" x="163" y="365" direction="-90.0" start="default" colorize="#00ff0022" scale="6.107142857142857" behaviour="uk.co.nickthecoder.itchy.util.NullBehaviour"/>
   <actor costume="ship" x="198" y="85" direction="93.94518622903759" start="default" behaviour="uk.co.nickthecoder.itchy.util.NullBehaviour"/>
   <actor costume="bullet" x="193" y="139" direction="95.90614111377052" start="default"/>
-  <text text="Drunk" font="boycott" size="86" color="#cc2222" x="475" y="407" direction="7.594643368591445" start="default"/>
-  <text text="Invaders" font="boycott" size="61" color="#ffffff" x="486" y="331" direction="2.160560963458598" start="default"/>
-  <text text="Play" font="blackCasper" size="56" color="#ffffff" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="319" y="225" direction="0.0" start="default">
+  <text text="Drunk" font="boycott" size="86" color="#cc2222" x="475" y="407" direction="7.594643368591445" start=""/>
+  <text text="Invaders" font="boycott" size="61" color="#ffffff" x="486" y="331" direction="2.160560963458598" start=""/>
+  <text text="Play" font="blackCasper" size="56" color="#ffffff" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="319" y="225" direction="0.0" start="">
     <property name="action" value="play"/>
   </text>
-  <text text="Credits" font="blackCasper" size="46" color="#ffffff" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="324" y="88" direction="0.0" start="default">
+  <text text="Credits" font="blackCasper" size="46" color="#ffffff" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="324" y="88" direction="0.0" start="">
     <property name="action" value="about"/>
   </text>
-  <text text="Quit" font="blackCasper" size="66" color="#000000" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="319" y="25" direction="0.0" start="default">
+  <text text="Quit" font="blackCasper" size="66" color="#000000" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="319" y="25" direction="0.0" start="">
     <property name="action" value="quit"/>
   </text>
   <actor costume="bomb" x="181" y="234" direction="-90.0" start="default" scale="3.5"/>
-  <text text="Editor" font="blackCasper" size="46" color="#ffffff" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="322" y="155" direction="0.0" start="default">
+  <text text="Editor" font="blackCasper" size="46" color="#ffffff" behaviour="uk.co.nickthecoder.drunkinvaders.DrunkButton" x="322" y="155" direction="0.0" start="">
     <property name="action" value="editor"/>
   </text>
 </scene>
