@@ -1,7 +1,10 @@
 2013-07-03
 ==========
 Added a shield to DrunkInvader's ship.
+New FrameRate class to keep a consistent frame rate, inspired by Simon Lucas.
 
+Milestone
+=========
 Its exactly one year since I started writing Itchy (only about 2 months actually writing it - a 10 month gap).
 I'm very happy with progress. Writing games in Itchy is very nice. It easy to get something smart
 up and running very quickly.
